--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -40,14 +40,34 @@
                 >
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:textStyle="normal"
-                    android:textColor="@color/black"
                     android:textSize="30sp"
-                    android:id="@+id/right_tv"
                     android:gravity="center_horizontal"
+                    android:id="@+id/right_tv"
+                    android:textColor="@color/black"
                     android:background="@drawable/oval_button"
-                    android:layout_margin="50sp"/>
+                    android:layout_marginTop="50sp"
+                    android:layout_marginLeft="50sp"
+                    android:layout_marginRight="50sp"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:layout_margin="50sp"
+                    android:background="@drawable/oval_button"
+                    android:id="@+id/layout3"
+                    android:orientation="vertical"
+                    >
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/barCharRight"/>
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
