--- a/app/src/main/res/layout/fragment_left.xml
+++ b/app/src/main/res/layout/fragment_left.xml
@@ -7,8 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/pink_main"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        android:background="@color/pink_main">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -19,18 +18,19 @@
                 android:layout_height="0dp"
                 android:orientation="vertical"
                 android:layout_weight="3">
+
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textStyle="normal"
-                    android:gravity="center"
-                    android:textColor="@color/black"
-                    android:text="Прыжок"
-                    android:textSize="30sp"
-                    android:background="@drawable/oval_button"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="55sp"
+                    android:layout_marginTop="20sp"
                     android:layout_marginRight="55sp"
-                    android:layout_marginTop="40sp"/>
+                    android:background="@drawable/oval_button"
+                    android:gravity="center"
+                    android:text="Прыжок"
+                    android:textColor="@color/black"
+                    android:textSize="30sp"
+                    android:textStyle="normal" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -54,8 +54,8 @@
                     />
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
                     android:layout_margin="50sp"
                     android:background="@drawable/oval_button"
                     android:id="@+id/layout1"
