--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -21,7 +21,7 @@
                 android:layout_weight="3">
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:textStyle="normal"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -30,7 +30,7 @@
                     android:background="@drawable/oval_button"
                     android:layout_marginLeft="55sp"
                     android:layout_marginRight="55sp"
-                    android:layout_marginTop="40sp"/>
+                    android:layout_marginTop="20sp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -54,7 +54,7 @@
                     />
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:layout_margin="50sp"
                     android:background="@drawable/oval_button"
